<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Echos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_vip">VIP</string>
    <string name="menu_theme">Themes</string>
    <string name="menu_post">My Posts</string>
    <string name="menu_comments">My Comments</string>
    <string name="menu_history">My History</string>
    <string name="menu_favorites">My Favorites</string>
    <string name="menu_feedback">Feedback</string>

    <string name="menu_day_mode">Day Mode</string>
    <string name="menu_night_mode">Night Mode</string>
    <string name="menu_settings">Settings</string>

    <string name="text_login">Login</string>
    <string name="text_user">User</string>

    <string name="mainactivaty_text_news">News</string>
    <string name="mainactivaty_text_community">Community</string>
    <string name="mainactivaty_text_rss">RSS</string>

    <string name="mainactivaty_tag_news">News</string>
    <string name="mainactivaty_tag_community">Community</string>
    <string name="mainactivaty_tag_rss">RSS</string>
    
    <string name="settings_category_user">User</string>
    <string name="settings_category_settings">Settings</string>
    <string name="settings_category_about">About</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
